# brainfck-interpreter

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yaml  pytest.yaml
brainfck_interpreter/: interpret.py  interpreter.py
tests/: conftest.py  test_interpret.py  test_interpreter.py
tests/test_data/: hello_world.txt
