[tool.poetry]
name = "brainfck-interpreter"
version = "0.1.0"
description = ""
authors = ["Hendrik Scherner <h.scherner@appliedai.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.8"


[tool.poetry.group.tests.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
pre-commit = "^4.0.1"
ruff = "^0.9.1"

[tool.poetry.scripts]
bf = "brainfck_interpreter.interpret:interpret_command"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"